package com.chatsystem.msg;

enum MSG_ID 
{
	M_SignUp                               = 1;       //注册
	M_Login                                = 2;       //登录
	M_Auth                                 = 3;       //认证
	M_UserInit                             = 4;       //用户初始化
	M_GetAllUsers                          = 5;       //获取全部用户
	M_Chat                                 = 6;       //聊天
	M_AddRelation                          = 7;       //添加关系
	M_DelRelation                          = 8;       //删除关系
	M_AddRelationGroup                     = 9;       //增加好友分组
	M_MoveRelation                         = 10;       //移动好友
	M_FindUser                             = 11;       //搜索用户
	M_NotifyLogin                          = 12;      //通知上线
	M_NotifyLogoff                         = 13;      //通知下线
	M_CreateChatRoom                       = 14;      //创建群组
	M_JoinChatRoom                         = 15;      //加入群组
	M_GetAllChatRoom                       = 16;      //获取全部群组
	M_ChatRoomNotify                       = 17;      //群组通知
	M_LeaveChatRoom                        = 18;      //离开群组
	M_EasyLogin                            = 19;
	M_ErrorCode                            = 100;     //错误信息
}